--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "github-colors": "^2.2.18",
     "highcharts": "^9.1.0",
     "highcharts-react-official": "^3.0.0",
+    "json2csv": "^5.0.6",
     "lodash": "^4.17.21",
     "react-device-detect": "^1.17.0",
     "react-github-fork-ribbon": "^0.6.0",
